# Spectra_AI_Agent

apps/telephony_app/: Dockerfile  knowledge_base.json  knowledge_manager.py  main.py  pyproject.toml
